# mydex

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
data/pokedex/: home_shiny_form_dex.json  test.json
migrations/: 000001_init.sql
pokedexes/: national.json
scripts/: basic_national_dex.py  compile_data.py  import_names.py  schema.sql  start_tailwind.sh
src/: auth.rs  error.rs  main.rs  pokedex.rs
src/web/: index.rs  login.rs  mod.rs  static.rs
src/web/user/: mod.rs  pokedex.rs
templates/: add_pokedex.html  error.html  index.html  login.html  profile.html
