[package]
name = "mydex"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
axum-login =  "0.17.0"
axum-messages = "0.8.0"
tower-sessions = { version = "0.14.0", default-features = false, features = ["private"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["mysql"] }
tower-http = { version = "0.6.4", features = ["fs"] }
tower = "0.5.2"
http = "1.3.1"
tokio = { version = "1.45", features = ["full"] }
envconfig = "0.11"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
askama = "0.14.0"
sqlx = { version = "0.8.5", features = ["mysql", "macros", "migrate", "runtime-tokio-rustls", "chrono"] }
thiserror = "2.0.12"
anyhow = { version = "1.0.98", features = ["backtrace"] }
serde = { version = "1.0.219", features = ["derive"] }
password-auth = "1.0.0"
password-hash = "0.5.0"
async-trait = "0.1"
time = "0.3"
serde_json = "1.0.140"
base64 = "0.22.1"